# DEXTRO

./: .gitignore  =4.9.0  CLAUDE.md  CORRECTED_COMPACTNESS_NUMBERS.md  README.md  UNIFICATION_STATUS.md  WAVE-MANAGER-MIGRATION.md  WAVE09_QUICKSTART.md  WAVE_MANAGER_PHASE_NAMES_FIX.md  bootstrap.bat  bootstrap.sh  create_desktop_shortcut.vbs  create_test_data.bat  deploy_master.bat  deploy_web.bat  reorganize_2010_2020.bat  reorganize_data.bat  requirements.txt  run_dashboard_tests.bat  run_manager.bat  run_master.bat  run_tests.bat  setup_data.py  setup_env.bat  test_census_check.py  tmpclaude-d094-cwd  update_all_paths.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/routes/: districts.py  health.py  runs.py
backend/app/constants/: __init__.py  states.py
backend/app/models/: __init__.py  run.py
backend/app/schemas/: __init__.py  common.py  run.py
backend/app/services/: execution_service.py  run_service.py
backend/app/utils/: status_parser.py
backend/app/workers/: __init__.py  executor.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_districts_api.py  test_execution_api.py  test_health.py  test_run_api.py  test_run_service.py  test_status_parser.py
backend/tests/fixtures/: mock_pipeline.py
backend/tests/integration/: test_pipeline_execution.py
redist/: Cargo.toml  README.md
redist/crates/redist-analysis/: Cargo.toml
redist/crates/redist-analysis/schemas/: bloc_voting.schema.json
redist/crates/redist-analysis/src/: analyzer.rs  bloc_voting.rs  bloc_voting_writer.rs  compactness.rs  comparison.rs  contiguity.rs  county_names.rs  demographic.rs  dhondt.rs  ensemble_diagnostics.rs  exit_codes.rs  lib.rs  nesting.rs  partisan.rs  political.rs  proportionality.rs  race_of_candidate.rs  split_standards.rs  splits.rs  summary.rs  urban.rs  vra_analysis.rs
redist/crates/redist-apportion/: Cargo.toml
redist/crates/redist-apportion/src/: compositor.rs  graph.rs  huntington_hill.rs  lib.rs  nest.rs  prime.rs  split.rs
redist/crates/redist-cli/: .redist  Cargo.toml  build.rs  whitelist_dependencies.json
redist/crates/redist-cli/src/: adjacency_loader.rs  aggregate.rs  algo_config.rs  analyze.rs  analyze_label.rs  args.rs  bisection_runner.rs  build_cmd.rs  civic.rs  compare.rs  demographics.rs  depo.rs  doctor.rs  edge_weights.rs  ensemble.rs  export_cmd.rs  fetch.rs  geometry.rs  geosection_orientation.rs  import_cmd.rs  import_label.rs  integration_pipeline_tests.rs  io_utils.rs  label.rs  label_cmd.rs  lib.rs  main.rs  map_cmd.rs  migrate.rs  output.rs  paper_mode.rs  partisan.rs  partisan_shares.rs  plan_cmd.rs  plan_context.rs  policy.rs  provenance.rs  registry.rs  report_cmd.rs  research.rs  (+8 more)
redist/crates/redist-cli/tests/: bloc_voting_l1.rs  compare_narrative_l1.rs  spec7_pipeline_l2.rs
redist/crates/redist-core/: Cargo.toml
redist/crates/redist-core/src/: bisection.rs  fips.rs  graph.rs  lib.rs  metis_format.rs  partisan_weights.rs  partition.rs  population.rs  vra.rs
redist/crates/redist-core/tests/: integration.rs
redist/crates/redist-data/: Cargo.toml
redist/crates/redist-data/src/: adjacency.rs  bridge.rs  enacted.rs  fiedler.rs  lib.rs  serialize.rs  tiger.rs
redist/crates/redist-ensemble/: Cargo.toml
redist/crates/redist-ensemble/src/: chain.rs  forest_recom.rs  lib.rs  merge_split.rs  parallel_tempering.rs  recom.rs  spanning.rs  vra_recom.rs
redist/crates/redist-ensemble/tests/: ensemble_l1.rs  ensemble_l2.rs
redist/crates/redist-ilp/: Cargo.toml
redist/crates/redist-ilp/src/: formulation.rs  lib.rs  result.rs  solver.rs
redist/crates/redist-map/: Cargo.toml
redist/crates/redist-map/src/: colorscheme.rs  dissolve.rs  labeler.rs  lib.rs  map_type.rs  projection.rs  renderer.rs  rounds.rs
redist/crates/redist-metis/: ALGORITHM.md  Cargo.toml
redist/crates/redist-metis/benches/: baseline.json  bench_main.rs
redist/crates/redist-metis/src/: api.rs  lib.rs
redist/crates/redist-metis/src/coarsen/: hem.rs  mod.rs  shem.rs
redist/crates/redist-metis/src/graph/: mod.rs
redist/crates/redist-metis/src/init/: grow.rs  multiconstraint.rs  random.rs
redist/crates/redist-metis/src/multilevel/: hierarchy.rs  pipeline.rs
redist/crates/redist-metis/src/refine/: boundary.rs  fm.rs  gain.rs  kway.rs  lp.rs  minconn.rs  mod.rs
redist/crates/redist-metis/tests/: contracts.rs  graph_ops.rs  proptest_invariants.rs
redist/crates/redist-metis/verify/kani/: BOUNDS.md
redist/crates/redist-metis/verify/prusti/: GAPS.md  README.md  postconditions.rs
redist/crates/redist-multiscale/: Cargo.toml
redist/crates/redist-multiscale/src/: chain.rs  hierarchy.rs  lib.rs  rebalance.rs  seeds.rs
redist/crates/redist-multiscale/tests/: L0_unit.rs
redist/crates/redist-report/: Cargo.toml
redist/crates/redist-report/src/: audit.rs  canonical.rs  civic_gate.rs  comparison.rs  export.rs  html.rs  html_comparison.rs  import.rs  lib.rs  manifest.rs  moe.rs  narrative.rs  narrative_manifest.rs  paths.rs  report.rs  rplan.rs
redist/crates/redist-report/templates/: report.html.j2
redist/crates/redist-report/typst-templates/: README.md
redist/crates/redist-smc/: Cargo.toml
redist/crates/redist-smc/src/: algorithm.rs  lib.rs  output.rs  partial_plan.rs  proposal.rs  resample.rs  seeds.rs
redist/crates/redist-smc/tests/: L1_integration.rs  L2_real.rs
redist/crates/redist-tui/: Cargo.toml
redist/crates/redist-tui/src/: app.rs  integration_tests.rs  lib.rs  main.rs  plans.rs  runner.rs  session.rs
redist/crates/redist-tui/src/screens/: compare.rs  doctor.rs  home.rs  (+3 more)
redist/crates/redist-web/: Cargo.toml
redist/crates/redist-web/src/: lib.rs
redist/data/: location_policy.json  manifest.json  state_policy.json
redist/docs/: REDIST_CLI.md
redist/python/redist_py/: Cargo.toml  pyproject.toml
redist/python/redist_py/src/: lib.rs
redist/tests/acceptance/: test_aggregate_national.py  test_analyze_map_acceptance.py  test_migrate_acceptance.py  test_partisan_weighted_acceptance.py  test_pipeline_regression.py
(+3475 files in other folders)
