[tool.poetry]
name = "apportionment-backend"
version = "9.0.0"
description = "Congressional Redistricting API Backend"
authors = ["Apportionment Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
alembic = "^1.12.0"
aiofiles = "^23.0.0"
common-backend-utils = {path = "../../appmanager/packages/common-backend-utils", develop = true}
psycopg = {extras = ["binary"], version = "^3.3.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
