[workspace]
members = [
    "crates/redist-core",
    "crates/redist-data",
    "crates/redist-cli",
    "crates/redist-analysis",
    "crates/redist-map",
    "crates/redist-report",
    "crates/redist-web",
    "crates/redist-tui",
    "python/redist_py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gio Della-Libera"]
license = "MIT"

[workspace.dependencies]
# Algorithm / data structures
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Geometry (Phase 2+)
geo = "0.28"
geo-types = "0.7"
rstar = "0.12"

# CLI (Phase 3)
clap = { version = "4", features = ["derive"] }

# PyO3 bindings
pyo3 = { version = "0.22", features = ["abi3-py311"] }
numpy = "0.22"

# Utilities
thiserror = { version = "2" }
anyhow = "1"
tempfile = "3"
