[package]
name = "redist-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compactness metrics and VRA analysis for redistricting outputs"

[dependencies]
redist-core = { path = "../redist-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
geo.workspace = true
geo-types.workspace = true
csv = "1"
clap = { version = "4", features = ["derive"] }
