[package]
name = "redist-apportion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Huntington-Hill apportionment + extensible prime-factor redistricting compositor"

[dependencies]
metis-core   = { workspace = true }
# optional: only compiled when the "c-ffi" feature is enabled.
# The "vendored" sub-feature bundles the METIS C source so no system
# libmetis is required at runtime — but a C compiler is needed at build time.
metis = { version = "0.2", features = ["vendored"], optional = true }
thiserror.workspace   = true
anyhow.workspace      = true
serde.workspace       = true
serde_json.workspace  = true

[features]
# c-ffi: enables the C METIS FFI engine (links bundled C METIS source).
# Requires a C compiler at build time; produces a standalone binary at runtime.
c-ffi = ["dep:metis"]
# shadow-metis: run metis-core alongside c-ffi and warn on quality regressions.
# Implies c-ffi (both engines must be present to compare).
shadow-metis = ["c-ffi"]
# Default: include C METIS. Disable with --no-default-features for a
# pure-Rust build that requires no C toolchain at all.
default = ["c-ffi"]

[dev-dependencies]
# unit tests only — no extra deps needed
