[package]
name = "redist-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "redist CLI binary — congressional redistricting pipeline"

[[bin]]
name = "redist"
path = "src/main.rs"

[dependencies]
redist-core = { path = "../redist-core" }
redist-data = { path = "../redist-data" }
redist-analysis = { path = "../redist-analysis" }
tempfile = "3"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
clap = { version = "4", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
