[package]
name = "redist-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core redistricting algorithm — graph partitioning, bisection tree, VRA edge weights"

[dependencies]
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
# no extra deps needed for unit tests
