[package]
name = "redist-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Census data loading: TIGER shapefiles, adjacency graphs"

[dependencies]
redist-core = { path = "../redist-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
geo.workspace = true
geo-types.workspace = true
rayon.workspace = true
thiserror.workspace = true

# Shapefile reading (pure Rust, no GDAL)
shapefile = "0.6"

# WKB encoding for geometry output
wkb = "0.7"
