[package]
name = "redist-ensemble"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ReCom feasibility sampler for redistricting — uniform random spanning tree MCMC"

[dependencies]
metis-core     = { workspace = true }
rand.workspace = true
sha2.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# no extra dev deps needed
