[package]
name = "redist-metis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure Rust METIS graph partitioning — formally verified, deterministic"

[dependencies]
rand_pcg  = "0.3"
rand      = { version = "0.8", default-features = false, features = ["alloc"] }
thiserror.workspace = true
serde     = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest  = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Kani verification: run with `cargo +nightly kani --harness <name>`
# Kani 0.55+ uses #[cfg(kani)] attribute gating — no explicit dev-dependency needed
# Harnesses located in src/verify_harness.rs and verify/ directory
# See verify/kani/BOUNDS.md for bound justification

[[bench]]
name = "bench_main"
harness = false
