[package]
name = "redist-multiscale"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-scale MCMC redistricting — hierarchical mixing for large-k states (G.11)"

[dependencies]
redist-ensemble = { path = "../redist-ensemble" }
rand.workspace = true
sha2.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
