[package]
name = "redist-report"
version = "0.1.0"
edition = "2021"
authors = ["Gio Della-Libera"]
license = "MIT"
description = "RPLAN format, PlanManifest, validate/migrate for redist CLI"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
