[package]
name = "redist-report"
version = "0.1.0"
edition = "2021"
authors = ["Gio Della-Libera"]
license = "MIT"
description = "RPLAN format, PlanManifest, validate/migrate, report/export/import for redist CLI"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
# Spec 6: report + export + import
tera = "1"
geojson = "0.24"
geo = { version = "0.28", features = ["use-serde"] }
geo-types = "0.7"
base64 = "0.22"
csv = "1"

[dev-dependencies]
tempfile = "3"
