[package]
name = "redist-tui"
version = "0.1.0"
edition = "2021"
authors = ["Gio Della-Libera"]
description = "Interactive TUI for the redist redistricting CLI"

[[bin]]
name = "redist-tui"
path = "src/main.rs"

[dependencies]
redist-cli   = { path = "../redist-cli" }
redist-report = { path = "../redist-report" }
ratatui      = "0.28"
crossterm    = { version = "0.28", features = ["event-stream"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
anyhow       = "1"

[dev-dependencies]
tempfile = "3"
